ComboBox para seleção de algoritmo de pesquisa.

--- a/src/main/java/com/unesc/pesquisa/view/MainWindow.form
+++ b/src/main/java/com/unesc/pesquisa/view/MainWindow.form
@@ -24,14 +24,6 @@
           <text value="Selecionar pasta"/>
         </properties>
       </component>
-      <component id="27655" class="javax.swing.JCheckBox" binding="useParallelCheckbox">
-        <constraints>
-          <grid row="1" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
-        </constraints>
-        <properties>
-          <text value="Usar paralelismo"/>
-        </properties>
-      </component>
       <component id="72ad7" class="javax.swing.JButton" binding="searchButton">
         <constraints>
           <grid row="2" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
@@ -93,6 +85,12 @@
           </component>
         </children>
       </scrollpane>
+      <component id="84cbd" class="javax.swing.JComboBox" binding="typeCombobox" custom-create="true">
+        <constraints>
+          <grid row="1" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="2" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties/>
+      </component>
     </children>
   </grid>
 </form>
